--- a/public/userMenu.html
+++ b/public/userMenu.html
@@ -20,8 +20,8 @@
                     a new page with the animals info and there feedback forms samantha provides
                     and will be able to provide recovery progress
                     -->
-                    <li><a href="">View Animals</a></li> 
-                    <li><a href="">View Appointment</a></li>
+                    <li><a href="listAnimals.html">View Animals</a></li> 
+                    <!-- <li><a href="">View Appointment</a></li> -->
                     <li><a href="">Forms</a></li>
                 </ul>
             </nav>
