--- a/public/listAnimals.html
+++ b/public/listAnimals.html
@@ -16,7 +16,7 @@
                 <li><a href="Owner-Booking.html">Appointments</a></li>
                 <li><a href="ManageClients.html">Manage Clients</a></li>
                 <li><a href="manageAnimals.html">Manage Animals</a></li>
-                <li><a href="#">Forms</a></li>
+                <li><a href="formMenu.html">Forms</a></li>
             </ul>
         </nav>
     </div>
