Created links and menu for canine and equine.

--- a/public/formMenu.html
+++ b/public/formMenu.html
@@ -23,7 +23,7 @@
     <div class="formContainer">
         <h1>Forms</h1>
         <div class="boxContainer" id="containerBox">
-            <button class="treatmentForm" onclick="location.href = 'treatmentForm.html'">Treatment Forms</button><br><br>
+            <button class="treatmentForm" onclick="location.href = 'treatmentFormMenu.html'">Treatment Forms</button><br><br>
         </div>
     </div>
 </body>
