Finished the layout of the Equine Message Session Form.

--- a/public/equineMenu.html
+++ b/public/equineMenu.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="canineMenu.css" />
-    <title>Canine Menu</title>
+    <link rel="stylesheet" href="equineMenu.css" />
+    <title>Equine Menu</title>
   </head>
 
   <body>
@@ -20,11 +20,11 @@
       </nav>
     </div>
 
-    <div class="canineMenu">
-        <h1>Canine Message Sesison Menu</h1>
+    <div class="equineMenu">
+        <h1>Equine Message Sesison Menu</h1>
         <div class="boxContainer" id="containerBox">
-            <button class="addForm" onclick="location.href = 'addCanineForm.html'">Add Form</button>
-            <button class="viewForm" onclick="location.href = 'viewCanineForm.html'">View Forms</button>
+            <button class="addForm" onclick="location.href = 'addEquineForm.html'">Add Form</button>
+            <button class="viewForm" onclick="location.href = 'viewEquineForm.html'">View Forms</button>
         </div>
     </div>
   </body>
