--- a/public/addCanineForm.html
+++ b/public/addCanineForm.html
@@ -23,7 +23,7 @@
     <div class="messageSession">
         <h1>Canine Message Session Information</h1>
         <div class="messageInfoBox" id="informationContainer">
-            <form method="post" action="/saveCanineMessageForm">
+            <form method="post" action="/saveCanineMessageForm" id="canineForm">
                 <h2>Student Information: </h2>
                 <label class="CaseNumber" for="Case Number">Case Study #: </label>
                 <input type="text" class="caseNumber" name="caseNumber" required><br><br>
@@ -144,5 +144,13 @@
             </form>
         </div>
     </div>
+
+    <script>
+      document.getElementById("canineForm").addEventListener('submit', function(event) {
+        event.preventDefault();
+        alert("Form Saved Successfully");
+        event.target.submit();
+      });
+    </script>
   </body>
 </html>
