--- a/public/formMenu.html
+++ b/public/formMenu.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Owner-Booking.html">Appointments</a></li>
                 <li><a href="manageAnimals.html">Manage Animals</a></li>
-                <li><a href="formMenu.html">Forms</a></li>
+                <li><a href="ManageClients.html">Manage Clients</a></li>
             </ul>
         </nav>
     </div>
