--- a/public/Owner-Booking.html
+++ b/public/Owner-Booking.html
@@ -197,11 +197,13 @@
 
       <div class="column" id="confirmedAppointments">
         <h2>Confirmed Appointments</h2>
-        <ul id="confirmedList">
-          <!-- Confirmed appointments will be dynamically added here -->
-        </ul>
+        <div id="confirmedListContainer">
+          <ul id="confirmedList">
+            <!-- Confirmed appointments will be dynamically added here -->
+          </ul>
+        </div>
       </div>
-    </div>
+   
 
     <div id="appointmentDetails" class="hidden">
       <h2>Appointment Details</h2>
