Fixed some grammar errors.

--- a/public/equineMenu.html
+++ b/public/equineMenu.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="equineMenu">
-        <h1>Equine Message Sesison Menu</h1>
+        <h1>Equine Massage Sesison Menu</h1>
         <div class="boxContainer" id="containerBox">
             <button class="addForm" onclick="location.href = 'addEquineForm.html'">Add Form</button>
             <button class="viewForm" onclick="location.href = 'viewEquineForm.html'">View Forms</button>
