--- a/public/treatmentFormMenu.html
+++ b/public/treatmentFormMenu.html
@@ -27,13 +27,13 @@
           class="canineMessageSession"
           onclick="location.href = 'canineMenu.html'"
         >
-          Canine Message Session
+          Canine Massage Session
         </button>
         <button
           class="equineMessageSession"
           onclick="location.href= 'equineMenu.html'"
         >
-          Equine Message Session
+          Equine Massage Session
         </button>
       </div>
     </div>
