--- a/public/canineMenu.html
+++ b/public/canineMenu.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="canineMenu">
-        <h1>Canine Message Sesison Menu</h1>
+        <h1>Canine Massage Sesison Menu</h1>
         <div class="boxContainer" id="containerBox">
             <button class="addForm" onclick="location.href = 'addCanineForm.html'">Add Form</button>
             <button class="viewForm" onclick="location.href = 'viewCanineForm.html'">View Forms</button>
