--- a/public/viewCanineForm.html
+++ b/public/viewCanineForm.html
@@ -63,8 +63,10 @@
           if (data.length === 0) {
             document.getElementById("formInfo1").innerHTML = "No Forms Found";
           } else {
+            const formSearch = document.createElement("formSearch");
             data.forEach((forms) => {
-              document.getElementById("formInfo1").innerHTML = `
+              const formInfo = document.createElement("formInfo");
+              formInfo.innerHTML = `
               <p>Case #: ${forms.CaseNumber}</p>
               <p>Client Name: ${forms.ClientName}</p>
               <p>Phone Number: ${forms.PhoneNumber}</p>
@@ -97,8 +99,11 @@
               <p>Retraction RH (%): ${forms.RetractionRH2}</p>
               <p>Client Sign: ${forms.ClientSign}</p>
               <p>Therapist Sign: ${forms.TherapistSign}</p>
+              <p>--------------------------------------</p>
               `;
+              formSearch.appendChild(formInfo);
             });
+            document.getElementById("formInfo1").appendChild(formSearch);
           }
         } else {
           document.getElementById("formInfo1").innerHTML = "No Forms Found";
