--- a/public/canineMenu.html
+++ b/public/canineMenu.html
@@ -25,6 +25,7 @@
         <div class="boxContainer" id="containerBox">
             <button class="addForm" onclick="location.href = 'addCanineForm.html'">Add Form</button>
             <button class="viewForm" onclick="location.href = 'viewCanineForm.html'">View Forms</button>
+            <button class="editForm" onclick="location.href = 'editRemoveCanineForm.html'">Edit/Delete Forms</button>
         </div>
     </div>
   </body>
