Signing in now authenticates the session with each action to ensure the user is logged in.

--- a/public/userMenu.html
+++ b/public/userMenu.html
@@ -20,9 +20,9 @@
                     a new page with the animals info and there feedback forms samantha provides
                     and will be able to provide recovery progress
                     -->
-                    <li><a href="listAnimals.html">View Animals</a></li> 
+                    <li><a href="">View Animals</a></li> 
                     <!-- <li><a href="">View Appointment</a></li> -->
-                    <li><a href="">Forms</a></li>
+                    <li><a href="recoveryProgress.html">Recovery Progress</a></li>
                 </ul>
             </nav>
         </div>
